Login de usuario

--- a/src/app/eventos/admin/eventos.component.html
+++ b/src/app/eventos/admin/eventos.component.html
@@ -29,7 +29,7 @@
           <table class="table" *ngIf="eventos?.length > 0">
             <thead>
               <tr>
-                <th>Evento</th>
+                <th>Mis eventos</th>
                 <th>Fecha del evento</th>
                 <th>Acción</th>
               </tr>
