--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="page-header header-filter" filter-color="blue">
-  <div class="page-header-image" style="background-image:url(assets/img/login.jpg)"></div>
+  <div class="page-header-image" style="background-image:url(assets/img/bg/001.jpg)"></div>
 
   <div class="content">
     <div class="container">
