--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="page-header section-image">
-  <div class="page-header-image" style="background-image:url(../assets/img/bg11.jpg)"></div>
+  <div class="page-header-image" style="background-image:url(../assets/img/bg/002.jpg)"></div>
   <div class="content">
     <div class="container">
       <div class="row">
