--- a/src/app/eventos/admin/editar-evento.component.html
+++ b/src/app/eventos/admin/editar-evento.component.html
@@ -130,7 +130,8 @@
 
         <div class="col-12 col-md-6">
 
-          <h3>Invitados <small>{{ '( ' + evento.invitados?.length + ' )'}}</small></h3>
+          <h3 class="mb-1">Invitados <small>{{ '( ' + evento.invitados?.length + ' )'}}</small></h3>
+          <p>Si eliminas un invitado, este será notificado por correo electrónico. Primero debes estar seguro que no ha enviado deseos a tu evento.</p>
 
           <div class="row">
             <div class="col-md-12" *ngFor="let i of evento.invitados">
