--- a/src/app/home/home-login.component.html
+++ b/src/app/home/home-login.component.html
@@ -1,3 +1,38 @@
-<p>
-  home-login works!
-</p>
+<div class="container">
+
+  <div class="card p-4">
+    <form class="form" [formGroup]="formulario" (ngSubmit)="loginUsuario()">
+      <div class="card-header header-primary text-center">
+        <!-- <div class="logo-container">
+          <img src="assets/img/now-logo.png" alt="">
+        </div> -->
+        <!-- <h3 class="text-dark">Ingresar</h3> -->
+      </div>
+      <div class="card-body">
+        <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
+          <div class="input-group-prepend">
+            <span class="input-group-text"> <i class="now-ui-icons users_circle-08"></i></span>
+          </div>
+          <input type="text" class="form-control" placeholder="Usuario" formControlName="usuario" (focus)="focus=true"
+            (blur)="focus=false" required email>
+        </div>
+        <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus1===true}">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
+          </div>
+          <input type="password" placeholder="Contraseña" class="form-control" formControlName="password"
+            (focus)="focus1=true" (blur)="focus1=false" required minlength="6" />
+        </div>
+      </div>
+      <div class="card-footer text-center">
+        <button type="submit" class="btn btn-primary btn-round">Ingresar</button>
+      </div>
+      <div class="d-flex justify-content-between">
+        <h6>
+          <a class="link" [routerLink]="['/register']">Registrarme</a>
+        </h6>
+      </div>
+    </form>
+  </div>
+  
+</div>
